--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-US" data-bt-theme="Tabula 1.0.3">
+<html class="" lang="en-US" data-bt-theme="">
   <head>
     <meta charset="UTF-8" />
     <meta
